Remove useless node modules, gradle and build folders. Fix and add ignore api calls variables to be used in testing